# THERMOCALC

./: .gitignore  README.md  pyproject.toml  thermocalc.config.toml
.github/: copilot-instructions.md
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: admin_state.py  archives.py  auth.py  billing.py  consumption.py  notifications.py  reporting.py  runtime_measurements.py  scheduler.py  test_scenarios.py  thermostat_control.py  zigbee.py  zigbee2mqtt.py
app/static/css/: site.css
app/templates/: admin.html  admin_login.html  base.html  dashboard.html  ecs.html  heating_control.html  test_calculs.html  test_consommation.html
data/: admin_state.json  archive_index.json  runtime_measurements.json  sample_data.json
docs/: API.md  ARCHITECTURE.md  BILLING_WEIGHTS.md  EXPLOITATION.md  README.md  TEST_CALCULS.md
tests/: test_admin_scheduler.py  test_auth_archives.py  test_consumption.py  test_zigbee2mqtt.py  test_zigbee_admin.py
